src/index.css
*{box-sizing:border-box;}
body {
  margin: 0;
  font-family:'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    width:90%;

  background-color: #ddd;
  box-sizing: border-box;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
.header {
  background-color: rgb(38, 38, 236);
  color:#fff;
  top:0.01em;
  position:fixed;
  height: 4em;
  width:100%;
  z-index: 1;
}
.header .headingTitle {
  position:relative;
  left:2em;
  font-family: Arial, Helvetica, sans-serif;
}
.my-form{
  position: relative;
  top:7em;
  left:2.5em;
}
.my-form .inputText {
  position: absolute;
  height: 2.5em;
  border-radius: 5px;
  width:55%;
  left:11em;
}
.my-form .btn {
  background-color:#000;
  color:#fff;
  position:absolute;
  right: 10em;
  height: 2em;
  border-radius: 5px;
}
.my-form .btn:hover{
  background-color:yellow;
  color:blue;
  position:absolute;
  right: 10em;
  height: 2em;
  border-radius: 5px;
}
.photo-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  position: relative;
  left:5.5em;
  grid-gap:1.5em;



}
.thumbnail {
  position: relative;
  top:12em;
}
.thumbnail >h3 {
  font-size: 15px;
  width:70%;
  color:blue;
}
.thumbnail >img {
  border-radius: 10px;
}
@media (max-width:960px) {

  .my-form{
    position: relative;
    top:7em;
    left:2.5em;
  }
  .my-form .inputText {
    position: absolute;
    height: 2.5em;
    border-radius: 5px;
    width:60%;
    left:-0.1em;
  }
  .my-form .btn {
    background-color:#000;
    color:#fff;
    position:absolute;
    right: 1.5em;
    height: 2em;
    border-radius: 5px;
  }
  .my-form .btn:hover{
    background-color:yellow;
    color:blue;
    position:absolute;
    right: 4.5em;
    height: 2em;
    border-radius: 5px;
  }
  .photo-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    position: relative;
    left:2.5em;
    grid-gap:1.5em;



  }
  .thumbnail {
    position: relative;
    top:12em;
  }
  .thumbnail >h3 {
    font-size: 15px;
    width:70%;
    color:blue;
  }
  .thumbnail >img {
    border-radius: 10px;
  }
}

@media (max-width:600px) {
  .my-form{
    position: relative;
    top:7em;
    left:2.5em;
  }
  .my-form .inputText {
    position: absolute;
    height: 2.5em;
    border-radius: 5px;
    width:35%;
    left:-0.1em;
  }
  .my-form .btn {
    background-color:#000;
    color:#fff;
    position:absolute;
    right: 4em;
    height: 2.7em;
    border-radius: 5px;
    width:35%;
  }
  .my-form .btn:hover{
    background-color:yellow;
    color:blue;
    position:absolute;
    right: 2em;
    height: 2em;
    border-radius: 5px;
  }
  .photo-grid {
    display: grid;
    grid-template-columns: 1fr  1fr;
    position: relative;
    left:2.5em;
    grid-gap:1.5em;



  }
  .thumbnail {
    position: relative;
    top:12em;
  }
  .thumbnail >h3 {
    font-size: 15px;
    width:70%;
    color:blue;
  }
  .thumbnail >img {
    border-radius: 10px;
  }
}

